--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -33,8 +33,8 @@
                             <i class="fa fa-phone fa-2x text-dark"></i>
                         </div>
                         <div class="px-3">
-                            <h3 th:text="${hero.callNumber}">+994 50 512 50 66</h3>
-                            <span th:text="${hero.callLabel}">Pulsuz konsultasiya üçün 24/7 zəng edin</span>
+                            <h3 th:text="${about.phoneNumber}">+994 50 512 50 66</h3>
+                            <span th:text="${about.phoneLabel}">Pulsuz konsultasiya üçün 24/7 zəng edin</span>
                         </div>
                     </div>
                 </div>
