--- a/src/main/resources/static/front/css/style.css
+++ b/src/main/resources/static/front/css/style.css
@@ -550,10 +550,11 @@
 
 .gallery-item img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 350px;   /* 👈 hamısı eyni hündürlükdə */
+    object-fit: cover; /* şəkil kəsilib qutuya uyğunlaşır */
     display: block;
 }
+
 .btn-brown {
     background-color: #b48a60; /* qəhvəyi ton */
     border: none;
@@ -585,6 +586,51 @@
 /* başqa səhifələrdə xətt görsənməsin */
 .footer::after {
     display: none;
+}
+.price-item {
+    background-color: #2a2a2a; /* Qara fon */
+    padding: 15px 20px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
+.price-item h6 {
+    margin: 0;
+    font-weight: 600;
+    color: #d4a762; /* Qəhvəyi rəng */
+}
+
+.price-item h3 {
+    margin: 0;
+    font-weight: 700;
+    color: #fff;
+}
+.price-item {
+    background-color: #2a2a2a;
+    padding: 15px 20px;
+    margin-bottom: 15px;
+    border-radius: 6px;
+}
+
+.price-item .d-flex {
+    display: flex;
+    justify-content: space-between; /* biri solda, biri sağda */
+    align-items: center;
+}
+
+.price-item h6 {
+    margin: 0;
+    font-weight: 600;
+    color: #d4a762;
+    font-size: 18px;
+    margin-right: 20px; /* 👈 xidmət adı ilə qiymətin arasında boşluq */
+}
+
+.price-item h3 {
+    margin: 0;
+    font-weight: 700;
+    color: #fff;
+    font-size: 20px;
 }
 
 
