--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -14,7 +14,7 @@
             <h1 class="display-1 animated slideInLeft">Foto Qalereyamız</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center animated slideInLeft mb-0">
-                    <li class="breadcrumb-item"><a class="text-primary" href="#">Ana Səhifə</a></li>
+                    <li class="breadcrumb-item"><a class="text-primary" href="/">Ana Səhifə</a></li>
                     <li class="breadcrumb-item"><a class="text-primary" href="#">Səhifələr</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Qalereya</li>
                 </ol>
@@ -32,20 +32,23 @@
                 <h1 class="mb-5" th:text="${text.title}">Explore Our Gallery</h1>
             </div>
 
-            <div class="row g-0">
-                <div th:each="img : ${images}"
-                     th:class="${img.columnSize} + ' wow fadeIn'"
-                     data-wow-delay="0.2s">
-                    <div class="gallery-item">
-                        <!-- şəkil normal ölçüdə qalsın -->
-                        <img th:src="${img.imagePath}" class="img-fluid w-100" alt="">
-                        <div class="gallery-icon">
-                            <a th:href="${img.imagePath}" class="btn btn-primary btn-lg-square"
-                               data-lightbox="gallery"><i class="fa fa-eye"></i></a>
+            <!-- hər 3 şəkil üçün ayrıca row -->
+            <div th:each="chunk, iterStat : ${#numbers.sequence(0, (images.size() - 1) / 3)}">
+                <div class="row g-0">
+                    <div th:each="img : ${images.subList(iterStat.index * 3, iterStat.index * 3 + 3)}"
+                         th:class="${img.columnSize} + ' wow fadeIn'"
+                         data-wow-delay="0.2s">
+                        <div class="gallery-item">
+                            <img th:src="${img.imagePath}" class="img-fluid w-100" alt="">
+                            <div class="gallery-icon">
+                                <a th:href="${img.imagePath}" class="btn btn-primary btn-lg-square"
+                                   data-lightbox="gallery"><i class="fa fa-eye"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <!-- Gallery End -->
